# Cyber-CLI

./: pyproject.toml
src/caelestia/: __init__.py  parser.py
src/caelestia/subcommands/: emoji.py  install.py  record.py  resizer.py  scheme.py  screenshot.py  shell.py  toggle.py  update.py  wallpaper.py
src/caelestia/utils/: notify.py  paths.py  scheme.py  theme.py  version.py  wallpaper.py
src/caelestia/utils/dots/: deployer.py  diff.py  legacy.py  manifest.py  misc.py  packages.py  source.py  state.py
src/caelestia/utils/material/: __init__.py
